--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@notionhq/client": "^5.9.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "wrangler": "^4.68.1"
   }
 }
