--- a/my-worker/wrangler.jsonc
+++ b/my-worker/wrangler.jsonc
@@ -12,12 +12,12 @@
 	},
 	"compatibility_flags": [
 		"nodejs_compat"
-	]
-	// "triggers": {
-	// 	"crons": [
-	// 		"*/1 * * * *"
-	// 	]
-	// }
+	],
+	"triggers": {
+		"crons": [
+			"*/5 * * * *"
+		]
+	}
 	/**
 	 * Smart Placement
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
